--- a/数据处理代码-新手教程.md
+++ b/数据处理代码-新手教程.md
@@ -1,4 +1,5 @@
 
+
 - [一、矩阵处理 ](#head1)
 	- [ 情况一：常规矩阵](#head2)
 		- [例子1： 常规处理](#head3)
@@ -9,12 +10,13 @@
 			- [例子2: 需要提取部分细胞（直接对稀疏矩阵进行细胞筛选）](#head8)
 		- [情况2.2: 多个稀疏矩阵直接进行拼接再保存](#head9)
 		- [ 补充例子2：常规矩阵和稀疏矩阵的转换](#head10)
-- [ 二、cellAnnotion处理](#head11)
-	- [例子1: cellID刚好能够和title对应](#head12)
-	- [例子2: 存在某个线索可以实现cellID和sampleID的转化](#head13)
-- [ 三、快速填写marker基因](#head14)
-	- [情况1： markerGene文件以一个表格的形式存放](#head15)
-	- [情况2： markerGene文件以多重Excel表格的形式存放,不同的sheet用对应的clusterName表示](#head16)
+		- [ 补充例子3：如何处理HDF5(.h5)格式文件](#head11)
+- [ 二、cellAnnotion处理](#head12)
+	- [例子1: cellID刚好能够和title对应](#head13)
+	- [例子2: 存在某个线索可以实现cellID和sampleID的转化](#head14)
+- [ 三、快速填写marker基因](#head15)
+	- [情况1： markerGene文件以一个表格的形式存放](#head16)
+	- [情况2： markerGene文件以多重Excel表格的形式存放,不同的sheet用对应的clusterName表示](#head17)
 > 所有代码只做参考，大家需要根据自己情况修改
 # <span id="head1">一、矩阵处理 </span>
 
@@ -260,11 +262,111 @@ df_raw.insert(0,'cellID',cellID)
 
 ```
 ----
+#### <span id="head11"> 补充例子3：如何处理HDF5(.h5)格式文件</span>
+>h5 文件是以固定的方式将一组文件 (样本测序相关的 metadata、matrix、cluster 信息、坐标，等等）.  打包成为 AnnData 用于 Scanpy 处理流程。AnnData class 包括一个 object adata 储存 data matrix, 即 adata.X，一个 annotation of observations, 即 adata.obs，一个 annotation of variables, 即 adata.var (pd.DataFrame)，以及一个 unstructured annotation, 即 adata.uns (dict)。[详情参见](https://scanpy.readthedocs.io/en/stable/usage-principles.html#anndata)
 
-# <span id="head11"> 二、cellAnnotion处理</span>
+> **个人理解**：h5 文件可以看做是一个包含了多个文件或文件夹的压缩文件，打开文件时同时创建一个嵌套句柄，连接h5中的所有文件；文件夹对应一个group（所以需要用.keys()去获取其中的文件名，意思是需要嵌套的句柄指向该文件夹内的文件）；而文件对应group中的子项（可以直接用.value（注意，现在换成 [()] 的方式取值了）去读取其中的值，即句柄直接指向文件读取）；
+> **同样，也可以理解为一个多层嵌套的文件字典**
+
+> 使用 h5 文件的第一步是将其打开，检查数据内容，并将其中储存成 array 形式的数据整理成矩阵。已打开的文件不可重复打开，需要先 close，如果 close 不成功... 当然也可以直接 Shotdown 重来。[详情参见](http://docs.h5py.org/en/stable/high/group.html)
+
+例子代码如下：
+
+```python
+##h5文件的形式多种多样，请根据数据的情况修改，关键是要屡清楚文件中的各个数据长啥样；
+
+##导入相关模块
+import h5py  
+from scipy import sparse
+import numpy as np
+from scipy.sparse import csr_matrix
+from scipy import sparse, io
+import pandas as pd
+
+
+# 读入hdf5格式文件
+f = h5py.File('./miller20-Copy1.processed.h5ad','r+')
+
+
+# 查看根下的所有group
+list(f.keys())  
+# Output eg: ['X', 'obs', 'obsm', 'uns', 'var']
+
+#### 一般 X、uns 是 group，obs、obsm、var 是 dataset。
+### 同时，X 是 mtx，不带 cellID 和 geneSymbol 的测序结果；obs 是测序结果汇总、cluster 信息和一些 cell metadata；obsm 是 tSNE、UMAP 坐标；uns 是 sample metadata；var 基因相关内容。
+##此例子中没有明显的cellID和geneSymbol,但是查看obs和var能够发现，cellID和geneSymbol分别在obs和var中；
+
+###这些内容不是固定的，要根据数据信息自行判定；（把数据自己输出来看看）
+
+###获取cell mate信息
+##obs, obsm
+cell_mate = f['obs'][()]
+cell_mate = pd.DataFrame(cell_mate)
+cell_mate.head()
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200521192233286.png#pic_center)
+```python
+#obsm中存放的tSNE或UMAP信息
+
+##储存形式有点奇怪，不过可以通过以下方式转化
+tSNE_array = np.array(f['obsm'][()].tolist())
+cell_tSNE = pd.DataFrame({'tSNE1': tSNE_array[:, 0][:,0],'tSNE2': tSNE_array[:, 0][:,1], 'UMAP1': tSNE_array[:, 1][:,0], 'UMAP2': tSNE_array[:, 1][:,1]})
+cell_tSNE.insert(0,'cellID',cell_mate['index'].tolist())#插入cellID
+cell_tSNE.head()
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200521212508740.png#pic_center)
+```python
+##提取基因信息
+gene_df = f['var'][()]
+gene_df = pd.DataFrame(gene_df)
+gene_df.head()
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200521192613723.png)
+
+```python
+###提取表达谱
+##表达谱以稀疏矩阵的形式存放
+list(f['X'].keys())
+##output： ['data', 'indices', 'indptr']
+data = f['X']['data']
+indices = f['X']['indices']
+indptr = f['X']['indptr']
+
+matrix = csr_matrix((data, indices, indptr))
+matrix.shape
+##output: (23832, 36807)  ##查看矩阵大小，如果细胞数不超过1万，则需要转化为DataFrame；
+
+##barcode
+cellID = cell_mate['index'].tolist()
+
+##geneSymbol
+genes = gene_df['index'].tolist()
+
+# 并且，根据 matrix的shape来判断是否需要矩阵转置
+matrix = matrix.T ##
+
+# 转为coo矩阵
+matrix = matrix.tocoo()
+##之后使用模板中的代码保存稀疏矩阵即可
+
+###当然也可将它转为DataFrame来保存；视情况而定
+matrix.columns= [genes]##列重命名
+matrix.insert(0,'cellID',cellID)#插入cellID
+matrix.head()
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200521195641987.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2FpbWluWVkxOTkz,size_16,color_FFFFFF,t_70#pic_center)
+```python
+###自己查看uns数据，然后提取其中有用信息
+f['uns'].keys()#查看键
+f['uns']['Cell_group_categories'][()]##提取值
+##也可写个函数将它转成常规字典
+```
+![在这里插入图片描述](https://img-blog.csdnimg.cn/20200521212543245.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2FpbWluWVkxOTkz,size_16,color_FFFFFF,t_70#pic_center)
+
+# <span id="head12"> 二、cellAnnotion处理</span>
 >此部分处理的关键是找到cellID和sample中某一列的对应关系（一般是title）
 
-##### <span id="head12">例子1: cellID刚好能够和title对应</span>
+##### <span id="head13">例子1: cellID刚好能够和title对应</span>
 > 此时基于两者完成两个dataframe的匹配即可；
 
 >匹配不建议使用loc加循环的方式去做，速度特别慢，这里推荐使用pd.merge实现df_cell和sample的匹配
@@ -316,7 +418,7 @@ df_cell['tSNE2'] = ''
 2. 当cellID和sample中的列无法直接匹配时就得自己想办法处理了，这里千万要仔细。多数情况是能找到匹配线索的，此时可以在sample中添加一列，将线索转化为一列信息然后用于合并就行（**请看例子2**）
 3. 同理，如果有cluster文件，也可以使用此方法将df_cell和cluster文件进行匹配
 
-##### <span id="head13">例子2: 存在某个线索可以实现cellID和sampleID的转化</span>
+##### <span id="head14">例子2: 存在某个线索可以实现cellID和sampleID的转化</span>
 如下图： 已知细胞的barcode（cellID）的尾标和sample是相互对应的，那么我们可直接将cellID转化为sampleID，然后基于sampleID将df_cell和sample合并；
 ![2.3](https://img-blog.csdnimg.cn/20200510130957361.png?x-oss-process=image/watermark,type_ZmFuZ3poZW5naGVpdGk,shadow_10,text_aHR0cHM6Ly9ibG9nLmNzZG4ubmV0L2FpbWluWVkxOTkz,size_16,color_FFFFFF,t_70#pic_center)
 ```python
@@ -366,8 +468,8 @@ df_cell['FACSMarker'] = df_cell_tmp['characteristics_ch1.3.facs purification gat
 
 ----
 
-# <span id="head14"> 三、快速填写marker基因</span>
-### <span id="head15">情况1： markerGene文件以一个表格的形式存放</span>
+# <span id="head15"> 三、快速填写marker基因</span>
+### <span id="head16">情况1： markerGene文件以一个表格的形式存放</span>
 如下图：
 ```python
 cellMarker = pd.read_csv('../downloaded_data/GSE_supplementary_data/markerGene_C1.txt',sep='\t')
@@ -392,7 +494,7 @@ for name,group in cellMarker.groupby('cluster'):
     markerGenes[name]['statistics'] = group['avg_logFC'].tolist()# 统计量
     markerGenes[name]['statisticsType'] = ['wilcoxon' for i in range(len(group['gene'].tolist()))]
 ```
-### <span id="head16">情况2： markerGene文件以多重Excel表格的形式存放,不同的sheet用对应的clusterName表示</span>
+### <span id="head17">情况2： markerGene文件以多重Excel表格的形式存放,不同的sheet用对应的clusterName表示</span>
 如下图：
 ![3.2.png](https://imgconvert.csdnimg.cn/aHR0cHM6Ly91cGxvYWQtaW1hZ2VzLmppYW5zaHUuaW8vdXBsb2FkX2ltYWdlcy8yMzI0NzQ1Mi0xNzY4NGNmZDNjODExNzg5LnBuZw?x-oss-process=image/format,png)
 
